--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
+        "start": "node server/server",
+        "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -15,16 +15,17 @@
         "@angular/common": "~8.1.2",
         "@angular/compiler": "~8.1.2",
         "@angular/core": "~8.1.2",
+        "@angular/fire": "^5.2.1",
         "@angular/forms": "~8.1.2",
         "@angular/platform-browser": "~8.1.2",
         "@angular/platform-browser-dynamic": "~8.1.2",
         "@angular/router": "~8.1.2",
-        "@angular/fire": "^5.2.1",
         "@sweetalert2/ngx-sweetalert2": "^6.0.1",
         "body-parser": "^1.19.0",
-        "firebase": "^6.6.1",
+        "c": "^0.1.0",
         "express": "^4.17.1",
         "file-saver": "^2.0.2",
+        "firebase": "^6.6.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.17.1",
         "ngx-toastr": "^11.0.0",
