--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "postinstall": "ng build --aot --prod"
+        "postinstall": "ng build --prod"
     },
     "private": true,
     "dependencies": {
@@ -23,7 +23,6 @@
         "@angular/router": "~8.1.2",
         "@sweetalert2/ngx-sweetalert2": "^6.0.1",
         "body-parser": "^1.19.0",
-        "c": "^0.1.0",
         "express": "^4.17.1",
         "file-saver": "^2.0.2",
         "firebase": "^6.6.1",
